# python-damiao-driver

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
damiao_motor/: __init__.py  cli.py  controller.py  motor.py  web_gui.py
damiao_motor/templates/: index.html
docs/: index.md
docs/cli-reference/: index.md
examples/: multi_motor.py  single_motor.py
